--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "firebase": "^5.7.2",
     "lodash": "^4.17.11",
     "materialize-css": "^1.0.0",
+    "node-sass": "^4.12.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
@@ -35,6 +36,8 @@
     "enzyme-to-json": "^3.3.5"
   },
   "jest": {
-    "snapshotSerializers": ["enzyme-to-json/serializer"]
-  }  
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
+  }
 }
