--- a/koa-backend/package.json
+++ b/koa-backend/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@koa/cors": "2",
+    "concurrently": "^4.1.0",
     "cross-env": "^5.1.3",
     "dotenv": "^5.0.0",
     "koa": "^2.5.0",
@@ -33,6 +34,7 @@
     "koa-respond": "^1.0.1",
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.2",
-    "mongoose": "^5.0.7"
+    "mongoose": "^5.0.7",
+    "nodemon": "^1.19.0"
   }
 }
